# ai-agent-bridge

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/agents/: claude.md  codex.md
src/agent_bridge/: __init__.py  bridge.py  config.py  events.py  protocols.py  session.py
src/agent_bridge/adapters/: base.py  slack.py
src/agent_bridge/agents/claude/: config.py  controller.py  events.py
src/agent_bridge/agents/codex/: config.py  controller.py  events.py  thread_map.py
src/agent_bridge/claude/: controller.py  events.py  session.py
tests/: test_bridge.py  test_claude_controller.py  test_codex_config.py  test_codex_controller.py  test_codex_events.py  test_codex_thread_map.py  test_events.py  test_heartbeat.py  test_session.py  test_slack_adapter_io.py  test_slack_directives.py  test_slack_format.py  test_slack_truncation.py
